...
    mainViewModel: MainViewModel,
    settingsState: SettingsState,
    vpnDisabled: Boolean,
    sheetState: SheetState,
    scope: CoroutineScope,
) {
    LabSettingGroup("Режим работы") {
        LabSettingToggle(
            "Только локальный прокси",
            "Локальный прокси без VPN и выбора приложений.",
            settingsState.switches.disableVpn,
            mainViewModel::setDisableVpnEnabled,
        )
...
